Collapsifier link for the majors listing, fixes IE-related bugs (logo, header's height, flex-box floating) (#38)
* [INIT]

* [ENH] Styling of show more/less button when used under the majors listing.

* [FIX] IE-related fixes of header's dynamic height calculation, logo disapperance on mobile and incorrect floating of the button holder in the mini card.

* [FIX] 'Show all requirements' link is not shifted anymore.

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -144,7 +144,24 @@
             padding-top: 0;
             padding-bottom: .3em;
         }
+
+        > .collapsible__control {
+            padding: 0 1.5em;
+            text-align: left;
+            font-size: 110%;
+
+            > a {
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+
+        &.collapsed {
+            > .collapsible__control { margin-top: 0; }
+        }
     }
+
+
 
     .container-opened {
         border-bottom: 1px solid $grey-gallery;
